<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

<!--
    <LinearLayout
        android:id="@+id/station_info_area"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_station"
            android:textSize="25sp"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="深圳北"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/from_to_icon"
            android:layout_width="wrap_content"
            android:src="@drawable/exchange"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/end_station"
            android:textSize="25sp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="长沙南"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <EditText
        android:id="@+id/start_station"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:background="@drawable/bg_edittext"
        android:hint="@string/start_station_name" />

    <ImageView
        android:id="@+id/exchange_img"
        android:layout_below="@+id/start_station"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:src="@drawable/exchange_two"/>

    <EditText
        android:id="@+id/end_station"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/exchange_img"
        android:background="@drawable/bg_edittext"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:hint="@string/end_station_name" />

    <DatePicker
            android:id="@+id/time"
            android:layout_below="@+id/end_station"
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:theme="@android:style/Theme"
            android:layout_height="200dp">
        </DatePicker>
    -->

    <TextView
        android:id="@+id/station_tip"
        android:background="@color/background_gray"
        android:text="@string/station_tip"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:id="@+id/station_area"
        android:layout_below="@id/station_tip"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_station"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="深圳北"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_height="match_parent" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/to_right"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/end_station"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="长沙南"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/date_tip"
        android:background="@color/background_gray"
        android:layout_below="@+id/station_area"
        android:text="@string/date_tip"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/date_text"
        android:layout_below="@+id/date_tip"
        android:text="2018-10-26"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="70dp" />


    <TextView
        android:id="@+id/aaa"
        android:background="@color/background_gray"
        android:layout_below="@+id/date_text"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="30dp" />


    <Button
        android:id="@+id/search_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:background="@drawable/query_button_shape"
        android:text="@string/query_ticket_str"
        android:textColor="#ffffff" />

</RelativeLayout>